--- a/Views/Route/RouteList.cshtml
+++ b/Views/Route/RouteList.cshtml
@@ -1,7 +1,21 @@
 ﻿@model IEnumerable<Railway_Group01.Data.Route>
 @{
 	Layout = null;
+	var routes = ViewBag.Routes as IEnumerable<Railway_Group01.Data.Route>;
+	var page = ViewBag.Page;
+	var pageSize = ViewBag.PageSize;
+	var totalItemCount = ViewBag.TotalItemCount;
 
+	var pageCount = (int)Math.Ceiling((totalItemCount ?? 0) / (double)(pageSize ?? 1));
+	var visiblePages = 6;
+	var halfVisiblePages = visiblePages / 2;
+
+	var startPage = Math.Max(1, Convert.ToInt32(page - halfVisiblePages));
+	var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
+
+	var hasPreviousPage = page > 1;
+	var hasNextPage = page < pageCount;
+	int counter = ViewBag.DisplayCounter != null ? (int)ViewBag.DisplayCounter : 1;
 }
 <style>
 	.name {
@@ -79,6 +93,11 @@
 	.colerth{
 		background-color: #EC5B24 !important;
 		color: white !important;
+	}
+	.buttonSearch{
+		border-radius: 5px;
+		background-color: f17e52;
+		color: white;
 	}
 </style>
 <!-- Required meta tags -->
@@ -345,13 +364,17 @@
 						<div class="px-6 py-6">
 							<div class="row justify-content-between">
 								<!-- form -->
-								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
-									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search Route" aria-label="Search" />
-									</form>
-								</div>
+								<form class="d-flex" asp-action="SearchRoute" method="get">
+									<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
+										<input class="form-control" name="start" type="text" placeholder="Stations Start" aria-label="Search" />
+									</div>
+									<div class="col-lg-1"></div>
+									<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
+										<input class="form-control" name="end" type="text" placeholder="Stations End" aria-label="Search" />
+									</div>
+									<button type="submit" class="buttonSearch">Search</button>
+								</form>
 								<!-- select option -->
-								
 							</div>
 						</div>
 						@if (TempData["SuccessMessage"] != null)
@@ -410,7 +433,7 @@
 										{										
 											<tr>
 												<td>
-													@item.Id
+													@counter
 												</td>
 												<td>@item.StartStation.Name</td>
 												<td>@item.EndStation.Name</td>
@@ -444,7 +467,8 @@
 														</ul>
 													</div>
 												</td>
-											</tr>									
+											</tr>
+											counter++;
 										}
 									</tbody>
 								</table>
@@ -454,22 +478,6 @@
 							<span> @Model.Count() Items</span>
 							<nav class="mt-2 mt-md-0">
 								<ul class="pagination mb-0">
-									@{
-										var routes = ViewBag.Routes as IEnumerable<Railway_Group01.Data.Route>;
-										var page = ViewBag.Page;
-										var pageSize = ViewBag.PageSize;
-										var totalItemCount = ViewBag.TotalItemCount;
-
-										var pageCount = (int)Math.Ceiling(totalItemCount / (double)pageSize);
-										var visiblePages = 6;
-										var halfVisiblePages = visiblePages / 2;
-
-										var startPage = Math.Max(1, page - halfVisiblePages);
-										var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
-
-										var hasPreviousPage = page > 1;
-										var hasNextPage = page < pageCount;
-									}
 
 									<nav aria-label="Page navigation">
 										<ul class="pagination">
