--- a/Views/Shared/_AdminNavbar.cshtml
+++ b/Views/Shared/_AdminNavbar.cshtml
@@ -62,10 +62,10 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="/BookingManager/BookingManager">
+					<a class="nav-link " href="/TransactionManager/TransactionManager">
 						<div class="d-flex align-items-center">
 							<span class="nav-link-icon iconAdminNavbar"><i class="bi bi-ticket"></i></span>
-							<span class="nav-link-text iconAdminNavbar">Booking</span>
+							<span class="nav-link-text iconAdminNavbar">Transactions</span>
 						</div>
 					</a>
 				</li>
@@ -86,10 +86,10 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="/SeatManager/SeatList">
+					<a class="nav-link " href="/CoachManager/CoachList">
 						<div class="d-flex align-items-center">
-							<span class="nav-link-icon iconAdminNavbar"><i class="fa-solid fa-seat-airline"></i></span>
-							<span class="nav-link-text iconAdminNavbar">Seat</span>
+							<span class="nav-link-icon iconAdminNavbar"><i class="fa-solid fa-train"></i></span>
+							<span class="nav-link-text iconAdminNavbar">Coach</span>
 						</div>
 					</a>
 				</li>
