--- a/Views/TransactionManager/TransactionDetail.cshtml
+++ b/Views/TransactionManager/TransactionDetail.cshtml
@@ -1,27 +1,20 @@
-﻿@model IEnumerable<Railway_Group01.Data.Seat>
+﻿@model IEnumerable<Railway_Group01.Data.BookingDetail>
 @{
 	Layout = null;
+
 }
-<style>
-	.name {
-		position: relative;
-		bottom: 15px;
-		left: 20px;
-	}
-
-	.colerth {
-		background-color: #EC5B24 !important;
-		color: white !important;
-	}
-
-</style>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta content="Codescandy" name="author">
-<title>Seat List</title>
+<title>Transaction Details</title>
 <!-- Favicon icon-->
-
+<style>
+	.colerth {
+		background-color: #EC5B24 !important;
+		color: white !important;
+	}
+</style>
 <partial name="_AdminHeader" />
 <div class="main-wrapper">
 	<!-- navbar vertical -->
@@ -32,14 +25,14 @@
 		<div class="navbar-vertical">
 			<div class="px-4 py-5 d-flex justify-content-between align-items-center">
 				<a href="../index.html" class="navbar-brand">
-					<img src="/images/ixigo.jpg" alt="" />
+					<img src="../assets/images/logo/freshcart-logo.svg" alt="" />
 				</a>
 				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
 			<div class="navbar-vertical-content flex-grow-1" data-simplebar="">
 				<ul class="navbar-nav flex-column">
 					<li class="nav-item">
-						<a class="nav-link " href="/Admin/index.html">
+						<a class="nav-link " href="../dashboard/index.html">
 							<div class="d-flex align-items-center">
 								<span class="nav-link-icon"><i class="bi bi-house"></i></span>
 								<span>Dashboard</span>
@@ -53,7 +46,7 @@
 						<a class="nav-link  active " href="../dashboard/products.html">
 							<div class="d-flex align-items-center">
 								<span class="nav-link-icon"><i class="bi bi-cart"></i></span>
-								<span class="nav-link-text">Trains</span>
+								<span class="nav-link-text">Products</span>
 							</div>
 						</a>
 					</li>
@@ -255,19 +248,18 @@
 					<!-- page header -->
 					<div class="d-md-flex justify-content-between align-items-center">
 						<div>
-							<h2>Seat</h2>
+							<h2>Booking Details</h2>
 							<!-- breacrumb -->
 							<nav aria-label="breadcrumb">
 								<ol class="breadcrumb mb-0">
-									<li class="breadcrumb-item"><a href="/Admin/Index" class="text-inherit">Dashboard</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Seat List</li>
+									<li class="breadcrumb-item"><a href="#" class="text-inherit">Dashboard</a></li>
+									<li class="breadcrumb-item active" aria-current="page">Booking List</li>
+									<li class="breadcrumb-item active" aria-current="page">Booking Details</li>
 								</ol>
 							</nav>
 						</div>
 						<!-- button -->
-						<div>
-							<a href="/TrainMaster/CreateTrain" class="btn btn-me">Add Trains</a>
-						</div>
+
 					</div>
 				</div>
 			</div>
@@ -281,26 +273,13 @@
 								<!-- form -->
 								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
 									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search Trains" aria-label="Search" />
+										<input class="form-control" type="search" placeholder="Search Booking" aria-label="Search" />
 									</form>
 								</div>
 								<!-- select option -->
-								<div class="col-lg-2 col-md-4 col-12">
-									<select class="form-select">
-										<option selected>Status</option>
-										<option value="1">Active</option>
-										<option value="2">Deactive</option>
-										<option value="3">Draft</option>
-									</select>
-								</div>
+
 							</div>
 						</div>
-						@if (TempData["SuccessMessage"] != null)
-						{
-							<script>
-								alert('@TempData["SuccessMessage"]');
-							</script>
-						}
 						<!-- card body -->
 						<div class="card-body p-0">
 							<!-- table -->
@@ -309,102 +288,37 @@
 									<thead class="bg-light">
 										<tr>
 											<th class="colerth">Id</th>
-											<th class="colerth">Seat No</th>
-											<th class="colerth">Availabe</th>
-											<th class="colerth">CompartmentNo</th>
-											<th class="colerth">Coach Id</th>
-											<th class="colerth">Action</th>
+											<th class="colerth">Seat Id</th>
+											<th class="colerth">Schedule Id</th>
+											<th class="colerth">Booking Id</th>
 										</tr>
 									</thead>
-									<tbody>
-										@foreach (var item in Model)
-										{
+									@foreach (var item in Model)
+									{
+										<tbody>
 											<tr>
-												<td>@item.Id</td>
-												<td>@item.SeatNo</td>
 												<td>
-													<span class="badge bg-light-primary text-dark-primary">@item.Available</span>
+													@item.Id
 												</td>
-												<td>@item.CompartmentNo</td>
-												<td>@item.CoachId</td>
-												<td>
-													<div class="dropdown">
-														<a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
-															<i class="bi bi-three-dots-vertical"></i>
-														</a>
-														<ul class="dropdown-menu">
-															<li>
-																<form asp-action="DeleteTrain" asp-route-id="@item.Id" onsubmit="return confirmDelete()">
-																	<button class="dropdown-item" type="submit">
-																		<i class="bi bi-trash me-3"></i>
-																		Delete
-																	</button>
-																</form>
-															</li>
-															<li>
-																<a class="dropdown-item" href="@Url.Action("EditTrain", new {id = item.Id})">
-																	<i class="bi bi-pencil-square me-3"></i>
-																	Edit
-																</a>
-															</li>
-														</ul>
-													</div>
-												</td>
+												<td>@item.Seat.Id</td>
+												<td>@item.Schedule.Id</td>
+												<td>@item.Booking.Id</td>
 											</tr>
-										}
-									</tbody>
+										</tbody>
+									}
+
 								</table>
 							</div>
 						</div>
 						<div class="border-top d-md-flex justify-content-between align-items-center px-6 py-6">
-							<span> @Model.Count() Items</span>
+							<span>Showing 1 to 8 of 12 entries</span>
 							<nav class="mt-2 mt-md-0">
 								<ul class="pagination mb-0">
-									@{
-										var seat = ViewBag.Seats as IEnumerable<Railway_Group01.Data.Seat>;
-										var page = ViewBag.Page;
-										var pageSize = ViewBag.PageSize;
-										var totalItemCount = ViewBag.TotalItemCount;
-
-										var pageCount = (int)Math.Ceiling(totalItemCount / (double)pageSize);
-										var visiblePages = 6;
-										var halfVisiblePages = visiblePages / 2;
-
-										var startPage = Math.Max(1, page - halfVisiblePages);
-										var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
-
-										var hasPreviousPage = page > 1;
-										var hasNextPage = page < pageCount;
-									}
-
-									<nav aria-label="Page navigation">
-										<ul class="pagination">
-											@if (hasPreviousPage)
-											{
-												<li class="page-item">
-													<a class="page-link" href="@Url.Action("SeatList", new { page = page - 1, pageSize = pageSize })" aria-label="Previous">
-														<span aria-hidden="true">&laquo;</span>
-													</a>
-												</li>
-											}
-
-											@for (int i = startPage; i <= endPage; i++)
-											{
-												<li class="page-item @(i == page ? "active" : "")">
-													<a class="page-link" href="@Url.Action("SeatList", new { page = i, pageSize = pageSize })">@i</a>
-												</li>
-											}
-
-											@if (hasNextPage)
-											{
-												<li class="page-item">
-													<a class="page-link" href="@Url.Action("SeatList", new { page = page + 1, pageSize = pageSize })" aria-label="Next">
-														<span aria-hidden="true">&raquo;</span>
-													</a>
-												</li>
-											}
-										</ul>
-									</nav>
+									<li class="page-item disabled"><a class="page-link" href="#!">Previous</a></li>
+									<li class="page-item"><a class="page-link active" href="#!">1</a></li>
+									<li class="page-item"><a class="page-link" href="#!">2</a></li>
+									<li class="page-item"><a class="page-link" href="#!">3</a></li>
+									<li class="page-item"><a class="page-link" href="#!">Next</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -414,12 +328,7 @@
 		</div>
 	</main>
 </div>
-<script>
-	function confirmDelete() {
-		var result = confirm("Do you want to delete?");
-		return result;
-	}
-</script>
+
 <partial name="_AdminFooter" />
 
 
