--- a/Views/Route/EditRoute.cshtml
+++ b/Views/Route/EditRoute.cshtml
@@ -283,7 +283,7 @@
 											{
 												@foreach (var station in list)
 												{
-													<option value="@station.Id">@station.Code</option>
+													<option value="@station.Id">@station.Name</option>
 												}
 											}
 										</select>
@@ -296,7 +296,7 @@
 											{
 												@foreach (var station in list)
 												{
-													<option value="@station.Id">@station.Code</option>
+													<option value="@station.Id">@station.Name</option>
 												}
 											}
 										</select>
