--- a/Views/RouteDetail/CreateRouteDetail.cshtml
+++ b/Views/RouteDetail/CreateRouteDetail.cshtml
@@ -284,7 +284,7 @@
 											{
 												@foreach (var station in listStation)
 												{
-													<option value="@station.Id">@station.Code</option>
+													<option value="@station.Id">@station.Name</option>
 												}
 											}
 										</select>
@@ -297,7 +297,7 @@
 											{
 												@foreach (var station in listStation)
 												{
-													<option value="@station.Id">@station.Code</option>
+													<option value="@station.Id">@station.Name</option>
 												}
 											}
 										</select>
@@ -309,7 +309,7 @@
 											{
 												@foreach (var route in listRoute)
 												{
-													<option value="@route.Id">@route.StartStation.Code to @route.EndStation.Code (@route.Id)</option>
+													<option value="@route.Id">@route.StartStation.Name to @route.EndStation.Name (@route.Id)</option>
 												}
 											}
 										</select>
