--- a/Views/StationMaster/StationMaster.cshtml
+++ b/Views/StationMaster/StationMaster.cshtml
@@ -1,6 +1,21 @@
 ﻿@model IEnumerable<Railway_Group01.Data.Station>
 @{
 	Layout = null;
+	var stations = ViewBag.Stations as IEnumerable<Railway_Group01.Data.Station>;
+	var page = ViewBag.Page;
+	var pageSize = ViewBag.PageSize;
+	var totalItemCount = ViewBag.TotalItemCount;
+
+	var pageCount = (int)Math.Ceiling((totalItemCount ?? 0) / (double)(pageSize ?? 1));
+	var visiblePages = 6;
+	var halfVisiblePages = visiblePages / 2;
+
+	var startPage = Math.Max(1, Convert.ToInt32(page - halfVisiblePages));
+	var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
+
+	var hasPreviousPage = page > 1;
+	var hasNextPage = page < pageCount;
+	int counter = ViewBag.DisplayCounter != null ? (int)ViewBag.DisplayCounter : 1;
 }
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -24,6 +39,16 @@
 		width: 10px;
 		left: 40%;
 		bottom: 18px;
+	}
+	.searchButton{
+		background-color: white;
+		width: 120px;
+		border-radius: 6px;
+		position: relative;
+		right: 70px;
+		border: 0px;
+		height: 1px;
+		top: 13px;
 	}
 </style>
 <partial name="_AdminHeader" />
@@ -284,8 +309,9 @@
 							<div class="row justify-content-between">
 								<!-- form -->
 								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
-									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search Stations" aria-label="Search" />
+									<form class="d-flex" asp-action="SearchStation" method="get">
+										<input class="form-control" name="name" type="text" placeholder="Search Stations" aria-label="Search" />
+										<button type="submit" class="searchButton"><i class="fas fa-search"></i></button>
 									</form>
 								</div>
 								<!-- select option -->
@@ -316,12 +342,12 @@
 											<th class="colerth">Action</th>
 										</tr>
 									</thead>
-									@foreach(var item in Model)
-									{
-										<tbody>
+									<tbody>
+										@foreach(var item in Model)
+										{
 											<tr>
 												<td>
-													@item.Id
+													@counter
 												</td>
 												<td>@item.Code</td>
 												<td>@item.Name</td>
@@ -353,10 +379,9 @@
 													</div>
 												</td>
 											</tr>
-
-										</tbody>
-									}
-									
+											counter++;
+										}
+									</tbody>
 								</table>
 							</div>
 						</div>
@@ -364,22 +389,6 @@
 							<span> @Model.Count() Items</span>
 							<nav class="mt-2 mt-md-0">
 								<ul class="pagination mb-0">
-									@{
-										var stations = ViewBag.Stations as IEnumerable<Railway_Group01.Data.Station>;
-										var page = ViewBag.Page;
-										var pageSize = ViewBag.PageSize;
-										var totalItemCount = ViewBag.TotalItemCount;
-
-										var pageCount = (int)Math.Ceiling(totalItemCount / (double)pageSize);
-										var visiblePages = 6;
-										var halfVisiblePages = visiblePages / 2;
-
-										var startPage = Math.Max(1, page - halfVisiblePages);
-										var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
-
-										var hasPreviousPage = page > 1;
-										var hasNextPage = page < pageCount;
-									}
 
 									<nav aria-label="Page navigation">
 										<ul class="pagination">
