--- a/Views/UserManager/UserManager.cshtml
+++ b/Views/UserManager/UserManager.cshtml
@@ -2,6 +2,20 @@
 @inject Microsoft.AspNetCore.Identity.UserManager<Railway_Group01.Data.User> UserManager
 @{
 	Layout = null;
+	var users = ViewBag.Users as IEnumerable<Railway_Group01.Data.User>;
+	var page = ViewBag.Page;
+	var pageSize = ViewBag.PageSize;
+	var totalItemCount = ViewBag.TotalItemCount;
+
+	var pageCount = (int)Math.Ceiling((totalItemCount ?? 0) / (double)(pageSize ?? 1));
+	var visiblePages = 6;
+	var halfVisiblePages = visiblePages / 2;
+
+	var startPage = Math.Max(1, Convert.ToInt32(page - halfVisiblePages));
+	var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
+
+	var hasPreviousPage = page > 1;
+	var hasNextPage = page < pageCount;
 }
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -13,6 +27,17 @@
 	.colerth {
 		background-color: #EC5B24 !important;
 		color: white !important;
+	}
+
+	.searchButton {
+		background-color: white;
+		width: 120px;
+		border-radius: 6px;
+		position: relative;
+		right: 70px;
+		border: 0px;
+		height: 1px;
+		top: 13px;
 	}
 </style>
 <partial name="_AdminHeader" />
@@ -273,8 +298,9 @@
 							<div class="row justify-content-between">
 								<!-- form -->
 								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
-									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search User" aria-label="Search" />
+									<form class="d-flex" asp-action="SearchUser" method="get">
+										<input class="form-control" name="name" type="text" placeholder="Search User" aria-label="Search" />
+										<button type="submit" class="searchButton"><i class="fas fa-search"></i></button>
 									</form>
 								</div>
 								<!-- select option -->
@@ -354,23 +380,6 @@
 							<span> @Model.Count() Items</span>
 							<nav class="mt-2 mt-md-0">
 								<ul class="pagination mb-0">
-									@{
-										var users = ViewBag.Users as IEnumerable<Railway_Group01.Data.User>;
-										var page = ViewBag.Page;
-										var pageSize = ViewBag.PageSize;
-										var totalItemCount = ViewBag.TotalItemCount;
-
-										var pageCount = (int)Math.Ceiling(totalItemCount / (double)pageSize);
-										var visiblePages = 6;
-										var halfVisiblePages = visiblePages / 2;
-
-										var startPage = Math.Max(1, page - halfVisiblePages);
-										var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
-
-										var hasPreviousPage = page > 1;
-										var hasNextPage = page < pageCount;
-									}
-
 									<nav aria-label="Page navigation">
 										<ul class="pagination">
 											@if (hasPreviousPage)
